# pye3d-detector

./: pyproject.toml
.github/workflows/: build-pye3d.yml
bench/: bench3d.py  ci_bench.py  ci_compare.py  extract_frames.py  gold3d.py  gold_cand.json  gold_ref.json  hist_pipeline.py  interleave3d.py  pipeline.py
pye3d/: detector_3d.py  observation.py
pye3d/cpp/: CMakeLists.txt  projections.pyx  pupil_detection_3d.pyx  refraction_correction.pyx  search_on_sphere.h
pye3d/eye_model/: base.py
pye3d/geometry/: projections.py  utilities.py
